# simplemonitor

./: .bzrignore  .codacy.yml  .codecov.yml  .coveragerc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTORS  Makefile  Pipfile  README  README.md  _config.yml  alerting.md  config.ini-dist  configuration.md  docker-compose.yml  envconfig.py  example.md  file.py  index.md  logger.py  logging.md  monitor.db  monitor.py  monitor.sql  monitors.ini-dist  monitors.ini-sample  monitors.md  params.json  pyproject.toml  remotelogger.py  requirements.txt  sender.py  setup.cfg  setup.py  (+5 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  docker.yml  linting.yml  main-3.5.yml  main.yml  publish.yml  windows.yml
Alerters/: __init__.py  alerter.py  bulksms.py  execute.py  fortysixelks.py  mail.py  nc.py  nma.py  pushbullet.py  pushover.py  ses.py  slack.py  syslogger.py  telegram.py
Loggers/: __init__.py  db.py  file.py  logger.py  mqtt.py  network.py
Monitors/: __init__.py  compound.py  file.py  hass.py  host.py  monitor.py  network.py  remote_monitor.py  remote_mount.py  remote_service.py  ring.py  service.py
_data/: monitors.yml
_includes/: monitors.html
_layouts/: page.html
_site/: example.html  index.html
docker/: Dockerfile  README.md  docker-compose.yml  monitor.Dockerfile  monitor.entrypoint.sh  start.py  webserver.Dockerfile
docs/: Gemfile  Makefile  _config.yml  alerters.rst  alerting.md  aws-boilerplate.rst  aws-confvals.rst  conf.py  configuration.md  configuration.rst  creating-alerters.rst  creating-loggers.rst  creating-monitors.rst  creds-warning.rst  get-config-values.rst  getting-started.rst  index.md  index.rst  installation.rst  loggers.rst  logging.md  monitors.rst  params.json  requirements.txt  simplemonitor.1
docs/_data/: monitors.yml
docs/_includes/: monitors.html
docs/_layouts/: page.html
docs/alerters/: 46elks.rst  bulksms.rst  email.rst  execute.rst  healthchecks.rst  nc.rst  nextcloud.rst  ntfy.rst  pushbullet.rst  pushover.rst  ses.rst  slack.rst  sms77.rst  sns.rst  syslog.rst  telegram.rst  twilio_sms.rst
docs/loggers/: db.rst  dbstatus.rst  html.rst  json.rst  json_full.rst  logfile.rst  logfileng.rst  mqtt.rst  network.rst  seq.rst
docs/monitors/: apcupsd.rst  arlo_camera.rst  command.rst  compound.rst  diskspace.rst  dns.rst  eximqueue.rst  fail.rst  filestat.rst  gmirror.rst  hass_sensor.rst  host.rst  http.rst  loadavg.rst  memory.rst  mqtt_client.rst  null.rst  ping.rst  pkgaudit.rst  portaudit.rst  process.rst  rc.rst  remote_ssh.rst  remotehosts.rst  ring.rst  ring_doorbell.rst  service.rst  svc.rst  swap.rst  systemd-unit.rst  tcp.rst  tls_expiry.rst  unifi_failover.rst  unifi_watchdog.rst  unix_service.rst
html/: footer.html  header.html  status.html  style.css
monitor/: alerter.py  logger.py  monitor.db  monitor.py  monitors.ini  monitors.py  simplemonitor.py
monitor/monitor/: dblogger.py  monitor.ini  remotelogger.py  sender.py
old_docs/: Gemfile  alerting.md  configuration.md  logging.md  monitors.md
old_docs/_includes/: monitors.html
old_docs/_layouts/: monitors.html  page.html
old_docs/stylesheets/: github-dark.css  stylesheet.css
scripts/init/: simplemonitor.conf
scripts/init.d/: simplemonitor
scripts/systemd/: README.md  simplemonitor.service
simplemonitor/: __init__.py  availTest.py  const.py  monitor.ini  monitor.py  monitors.ini  simplemonitor.py  version.py  winmonitor.py
simplemonitor/Alerters/: __init__.py  alerter.py  bulksms.py  execute.py  fortysixelks.py  healthchecks.py  mail.py  nc.py  nextcloud_notification.py  ntfy.py  pushbullet.py  pushover.py  ses.py  slack.py  sms77.py  sns.py  syslogger.py  telegram.py  twilio.py
simplemonitor/Loggers/: __init__.py  db.py  file.py  logger.py  mqtt.py  network.py  seq.py
simplemonitor/Monitors/: __init__.py  arlo.py  compound.py  file.py  gmirror.py  hass.py  host.py  monitor.py  mqtt.py  network.py  remote_ssh.py  ring.py  service.py  unifi.py
simplemonitor/html/: footer.html  header.html  package-lock.json  package.json  status-template.html  style.css  webpack.config.js
simplemonitor/html/src/: index.js  maps.js  style.css
simplemonitor/html/web/: index.html  index20.html  index20Example.html  style.css
simplemonitor/html/web_development/: MarkerCluster.Default.css  MarkerCluster.css  index_cluster.html  sites.js  sites.txt  style.css  test_sites.js
simplemonitor/util/: __init__.py  envconfig.py  json_encoding.py
stylesheets/: stylesheet.css  syntax.css
tests/: id_rsa  monitor-badinterval.ini  monitor-docker.ini  monitor-empty.ini  monitor-env.ini  monitor-html.ini  monitor-nointerval.ini  monitor-ping.ini  monitor-sns.ini  monitor-windows.ini  monitor.ini  monitor.ini.txt  monitors-docker.ini  monitors-html.ini  monitors-myenv.ini  monitors-ping.ini  monitors-posthup.ini  monitors-prehup.ini  monitors-sns.ini  monitors-windows.ini  monitors.ini  monitors.ini.txt  test-network.sh  test_alerter.py  test_diskspace.py  test_envconfig.py  test_fortysixelks.py  test_gmirror.py  test_healthchecks.py  test_host.py  test_htmllogger.py  test_logger.py  test_main.py  test_monitor.py  test_network_new.py  test_remote_monitor.py  test_remote_mount.py  test_remote_service.py  test_service.py  test_util.py  (+2 more)
tests/apcaccess-fail-mock/: apcaccess
tests/html/: map1.html  test1.html  test2.html  test3.html
tests/mocks/: exiqgrep  pkg  pkg-fail  pkg-fail-2  portaudit  portaudit-fail  rc  rc-fail  service  svok
tests/mocks/apcaccess-fail-mock/: apcaccess
tests/mocks/apcaccess-mock/: apcaccess
tests/network/client/: monitor-id.ini  monitor-ipv6.ini  monitor.ini  monitors.ini
tests/network/master/: monitor-no-pickle.ini  monitor.ini  monitors.ini
