[tool.poetry]
name = "simplemonitor"
version = "1.12.0+dev"
description = "A simple network and host monitor"
license = "BSD-3-Clause"
authors = ["James Seward <james@jamesoff.net>"]
readme = "README.md"
homepage = "https://github.com/jamesoff/simplemonitor"
repository = "https://github.com/jamesoff/simplemonitor"
documentation = "http://jamesoff.github.io/simplemonitor/"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Environment :: No Input/Output (Daemon)",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3",
	"Topic :: System :: Monitoring",
	"Typing :: Typed",
]
include = [
	"simplemonitor/html/dist/*",
	"simplemonitor/html/status-template.html",
]

[tool.poetry.scripts]
simplemonitor = "simplemonitor.monitor:main"
winmonitor = "simplemonitor.winmonitor:main"

[tool.poetry.dependencies]
python = "^3.6.2"
arrow = ">=0.17,<1.3"
boto3 = "^1.15.16"
colorlog = ">=4.4"
paho-mqtt = "^1.5.1"
ping3 = ">=2.6.6,<4.0.0"
psutil = "^5.7.2"
requests = "^2.24.0"
pync = {version = "^2.0.3", platform = "darwin"}
pywin32 = {version = ">=228,<304", platform = "win32"}
Jinja2 = ">=2.11.2,<4.0.0"
twilio = "^6.58.0"
ring-doorbell = ">=0.6.0"
pyarlo = "^0.2.4"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]
"flake8" = "*"
codecov = "*"
coverage = "*"
black = "*"
mypy = "*"
bandit = "*"
freezegun = "*"
pytest = "*"
pylint = "^2.13.8"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^3.0.0"
tox = "^3.25.0"
tox-poetry = "^0.4.0"
types-paramiko = "^2.8.19"
types-python-dateutil = "^2.8.15"
types-requests = "^2.27.19"
types-pyOpenSSL = "^22.0.3"
types-setuptools = "^57.4.14"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
