[tool.poetry]
name = "simplemonitor"
version = "1.13.0"
description = "A simple network and host monitor"
license = "BSD-3-Clause"
authors = ["James Seward <james@jamesoff.net>"]
readme = "README.md"
homepage = "https://github.com/jamesoff/simplemonitor"
repository = "https://github.com/jamesoff/simplemonitor"
documentation = "http://jamesoff.github.io/simplemonitor/"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Environment :: No Input/Output (Daemon)",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3",
	"Topic :: System :: Monitoring",
	"Typing :: Typed",
]
include = [
	"simplemonitor/html/dist/*",
	"simplemonitor/html/status-template.html",
]

[tool.poetry.scripts]
simplemonitor = "simplemonitor.monitor:main"
winmonitor = "simplemonitor.winmonitor:main"

[tool.poetry.dependencies]
python = "^3.8.0"
arrow = ">=0.17,<1.4"
boto3 = "^1.15.16"
colorlog = ">=4.4"
paho-mqtt = "^1.5.1"
ping3 = ">=2.6.6,<5.0.0"
psutil = ">=5.7.2,<7.0.0"
requests = "^2.24.0"
pync = {version = "^2.0.3", platform = "darwin"}
pywin32 = {version = ">=228,<309", platform = "win32"}
Jinja2 = ">=2.11.2,<4.0.0"
twilio = "^7.16.4"
ring-doorbell = ">=0.6.0"
paramiko = ">=2.7.2,<4.0.0"
importlib-metadata = "<8.6"
pyaarlo = ">=0.7.1.3,<0.9.0.0"
icmplib = "^3.0.3"

[tool.poetry.dev-dependencies]
"flake8" = "^5.0.4"
codecov = "*"
coverage = "*"
black = "*"
mypy = "*"
bandit = "*"
freezegun = "*"
pytest = "*"
pylint = "^3.2.7"
Sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.3.0"
pytest-cov = "^5.0.0"
tox = "^3.28.0"
tox-poetry = "^0.5.0"
types-paramiko = "^3.5.0"
types-python-dateutil = "^2.9.0"
types-requests = "^2.31.0"
types-pyOpenSSL = "^24.1.0"
types-setuptools = "^75.4.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.1,<0.7.4"
boto3-stubs = {extras = ["sns"], version = "^1.35.63"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
