[metadata]
version = attr: simplemonitor.__version__

[flake8]
max-line-length = 88
ignore = E501,W503,E203
per-file-ignores =
    simplemonitor/Monitors/__init__.py:F401
    simplemonitor/Loggers/__init__.py:F401
    simplemonitor/Alerters/__init__.py:F401
    simplemonitor/__init__.py:F401

[isort]
known_third_party = OpenSSL,arrow,freezegun,jinja2,requests,setuptools,sphinx,sphinx_rtd_theme,win32event,win32service,win32serviceutil
known_first_party = Alerters,Loggers,Monitors,envconfig,util,simplemonitor
line_length=88
multi_line_output=3
include_trailing_comma=True

[mypy]
ignore_missing_imports = True
