[metadata]
version = attr: simplemonitor.__version__

[flake8]
max-line-length = 88
ignore = E501,W503,E203
per-file-ignores =
    simplemonitor/Monitors/__init__.py:F401
    simplemonitor/Loggers/__init__.py:F401
    simplemonitor/Alerters/__init__.py:F401
    simplemonitor/__init__.py:F401

[isort]
known_third_party = arrow,boto3,botocore,freezegun,jinja2,oauthlib,paho,paramiko,pkg_resources,psutil,pyarlo,requests,ring_doorbell,setuptools,sphinx,sphinx_rtd_theme,twilio,win32event,win32service,win32serviceutil
known_first_party = Alerters,Loggers,Monitors,envconfig,util,simplemonitor
line_length=88
multi_line_output=3
include_trailing_comma=True

[mypy]
ignore_missing_imports = True
